--- a/layout-test.css
+++ b/layout-test.css
@@ -8,20 +8,11 @@
     width: 100vw;
     height: 100vh;
     position: absolute;
-    z-index: -3;
+    z-index: -1;
 }
 .fundo_albon img {
     width: 100vw;
     height: 100vh;
-}
-.inf {
-    width: 35vw;
-    margin-left: 30vw;
-    height: 100vh;
-    display: flex;
-    flex-flow: column;
-    justify-content: space-evenly;
-
 }
 #nome {
     font-size: 64px;
@@ -29,6 +20,7 @@
     max-width: 80vw;
     display: flex;
     align-items: center;
+    margin-left: 30vw;
 }
 #nome img {
     height: 56px;
@@ -45,27 +37,13 @@
 .piloto {
     border-bottom: solid white 2px;
 }
-.l1 {
-    display: flex;
-    justify-content: space-between;
-    
-}
-#paralelogramo {
-    width: 250px;
-    height: 50px;
-    transform: skewX(20deg);
-    background: white;
-    color: black;
-    font-size: 40px;
-    display: flex;
-    align-items: center;
-    }
-#tit {
-    color: white;
-    font-size: 40px;
-}
-video {
-    width: 60vw;
-}
+/* .paralelograma {
+    width: 150px;
+    height: 70px;
+    -webkit-transform: skew(-20deg);
+       -moz-transform: skew(-20deg);
+         -o-transform: skew(-20deg);
+    background: #c1c1c1;
+    } */
 
 
