--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     padding: 0;
     font-family: 'Racer';
 }
+body {
+    width: 100%;
+}
+.container {
+    width: 90vw;
+    display: flex;
+    min-height: 100%;
+    gap: 15vw;
+    margin-left: 5vw;
+}
 #fundo {
     position: absolute;
     width: 100%;
@@ -25,7 +35,6 @@
 }
 .botoes {
     padding-top: 20vh;
-    padding-left: 5vw;
     display: flex;
     flex-flow: column;
     gap: 13px;
@@ -45,4 +54,52 @@ button {
     background-color: rgba(52, 180, 209, 0.564);
     transform: scale(1.05) skewX(30deg);
     transition: 0.5s;
+}
+.index {
+    height: 100%;
+}
+.index img {
+    width: 400px;
+    height: 350px;
+    border: solid 10px rgb(228, 228, 228);
+    border-bottom: solid 40px rgb(228, 228, 228);
+    position: absolute;
+}
+#c {
+    rotate: 30deg;
+    margin-left: 140px;
+}
+#b {
+    rotate: 15deg;
+    margin-left: 70px;
+}
+#a {
+    rotate: 6deg;
+}
+#d {
+    rotate: 37deg;
+    margin-left: 195px;
+}
+#e {
+    rotate: 45deg;
+    margin-left: 250px;
+}
+.index h1 {
+    font-size: 64px;
+    margin-top: 450px;
+    padding: 40px 0px;
+    color: rgb(243, 243, 243);
+    position: absolute;
+}
+#button_tempo {
+    display: none;
+}
+#botao {
+    display: flex;
+    align-items: center;
+}
+#botao img {
+    width: 60px;
+    height: 60px;
+    position: absolute;
 }
